--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,80 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  body {
+    @apply bg-[#f7f7f7];
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  a {
+    @apply inline-block;
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    @apply w-1.5;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply bg-gray-200 rounded;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray-400 rounded;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-600;
+  }
+
+  .header-btn {
+    @apply text-sm font-semibold py-1.5 px-3 border-2 rounded-lg;
+  }
+
+  .aside-link {
+    @apply w-full p-2.5 rounded-full transition-colors hover:bg-[#f7f7f7] sm:flex sm:items-center sm:space-x-2.5 sm:rounded-md;
+  }
+
+  .aside-link span {
+    @apply hidden sm:inline-block sm:text-sm sm:font-semibold sm:whitespace-nowrap;
+  }
+
+  .home-toDo {
+    @apply w-full h-full flex flex-col p-1 rounded-md shadow-md overflow-hidden;
+  }
+
+  .home-toDo h4 {
+    @apply font-semibold text-center py-1 rounded;
+  }
+
+  .home-toDo ul {
+    @apply grid gap-2.5 text-black mt-1.5 p-1.5 overflow-y-auto;
+  }
+
+  .form-input-field {
+    @apply w-full space-y-2.5;
+  }
+
+  .form-input-field label {
+    @apply block text-sm font-medium;
+  }
+
+  .form-input-field input,
+  textarea {
+    @apply w-full bg-white py-1 px-2 border-2 border-solid border-gray-300 rounded-md shadow-sm;
+  }
+
+  .form-input-field textarea {
+    @apply resize-none;
+  }
+
+  .profile-form-btn {
+    @apply font-semibold text-white py-1.5 rounded-md;
+  }
 }
