--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,15 +45,15 @@
     @apply hidden sm:inline-block sm:text-sm sm:font-semibold sm:whitespace-nowrap;
   }
 
-  .home-toDo {
+  .home-task {
     @apply w-full h-full flex flex-col p-1 rounded-md shadow-md overflow-hidden;
   }
 
-  .home-toDo h4 {
+  .home-task h4 {
     @apply font-semibold text-center py-1 rounded;
   }
 
-  .home-toDo ul {
+  .home-task ul {
     @apply grid gap-2.5 text-black mt-1.5 p-1.5 overflow-y-auto;
   }
 
